# NetherEarth_lb426

./: Cargo.toml  LICENSE  NetherEarthLB426.md  README.md  ROADMAP.md
.claude/: settings.local.json
.github/workflows/: ci.yml
1/: Nether Earth LB426.md  NetherEarth lb426.md  TECHNICAL_SPECIFICATION Nether Earth LB426.txt
assets/locales/: en.ron  ru.ron
configs/: ai.ron  chassis.ron  electronics.ron  factories.ron  game.ron  nuclear.ron  weapons.ron
data/maps/: custom.ron  default.ron  dense.ron  razlom.ron  stress.ron  tri_zony.ron
data/scenarios/: custom.ron  default.ron  dense.ron  razlom.ron  stress.ron  tri_zony.ron
docs/: ARCHITECTURE.md  EDITOR.md  GAMEPLAY.md  IMPROVEMENTS_PLAN.md
references/models/: bullet1.asc  bullet2.asc  bullet3.asc  construction.asc  construction1.asc  construction2.asc  construction3.asc  e-antigrav.ase  e-bipod-base.ase  e-bipod-lleg.ase  e-bipod-rleg.ase  e-bipod.ase  e-cannon.ase  e-electronics.ase  e-missiles.ase  e-nuclear.ase  e-phasers.ase  e-tracks.ase  factory.ase  fence.asc  flag.asc  gameover.ase  go.ase  grass.ase  grass1.ase  grass2.ase  grass3.ase  h-antigrav.ase  h-bipod-base.ase  h-bipod-lleg.ase  h-bipod-rleg.ase  h-bipod.ase  h-cannon.ase  h-electronics.ase  h-missiles.ase  h-nuclear.ase  h-phasers.ase  h-tracks.ase  heavyrocks.ase  highwall1.ase  (+19 more)
saves/: autosave.ron
src/: lib.rs  main.rs  spatial.rs
src/ai/: build.rs  command.rs  mod.rs  scoring.rs  state.rs  systems.rs  victory.rs
src/app/: plugin.rs  state.rs
src/audio/: mod.rs
src/camera/: mod.rs  systems.rs
tests/: save_roundtrip.rs
(+76 files in other folders)
