[package]
name = "nether_earth"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bevy_common_assets = { version = "0.15.0", features = ["ron"] }

# Добавляются в поздних фазах:
# bevy_rapier3d = "0.33.0"   — Фаза 5 (физика ракет)
# bevy_asset_loader = "0.25" — Фаза 8 (asset loading states)
# bincode = "1.3"            — Фаза 9 (компактные сохранения)

[features]
# Включить для более быстрой компиляции в разработке:
# cargo run --features dev
dev = ["bevy/dynamic_linking"]
# Debug-инструменты (overlay, egui-спавн, gizmos, tooltip).
# В релизной сборке НЕ включать.
# cargo run --features debug_tools
debug_tools = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
